# unwrap-sa-challenge

./: .env.example  .gitignore  .openai.db  CHALLENGE.md  README.md  pyproject.toml  requirements.txt  results.txt
.venv_from_reqs/: pyvenv.cfg
data/raw/: sentiment_annotations.csv
notebooks/: .openai.db  00_data_exploration.ipynb  00_exploring_data.ipynb  01_comparing_openai_prompts.ipynb  02_comparing_models.ipynb
scripts/: compare_all_models.py  hpsearch_setfit.py  push_setfit.py  train_setfit.py
src/: config.py  connections.py
src/data/: make_dataset.py
src/models/: hf_transformers.py
src/pipelines/: __init__.py
src/pipelines/openai/: __init__.py  pipelines.py  prompts.py  templates.py  utils.py
src/pipelines/setfit/: __init__.py  loading.py  training.py
src/pipelines/transformers/: __init__.py
