[tool.poetry]
name = "sentiment-analysis-challenge"
version = "0.1.0"
description = ""
authors = ["Wescott Sharples <wesc@ttsharpl.es>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "3.10.8"
python-dotenv = "^0.21.0"
pydantic = "^1.10.4"
spacy = "^3.5.0"
en_core_web_sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0-py3-none-any.whl" }
textblob = "^0.17.1"
pandas = "^1.5.3"
matplotlib = "^3.6.3"
pymysql = "^1.0.2"
transformers = "^4.26.1"
setenv = "^0.0.1"
sentence-transformers = "^2.2.2"
setfit = "^0.6.0"
sketch = "^0.3.4"
tabulate = "^0.9.0"
langchain = "^0.0.83"
openai = "^0.26.5"
tiktoken = "^0.2.0"
datasets = "^2.9.0"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.0"
jupyter = "^1.0.0"
jupyter-black = "^0.3.3"
ipytest = "^0.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
