[tool.poetry]
name = "sentiment-analysis-challenge"
version = "0.1.0"
description = ""
authors = ["Wescott Sharples <wesc@ttsharpl.es>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "3.10.8"
python-dotenv = "^0.21.0"
pandas = "^1.5.3"
matplotlib = "^3.6.3"
pymysql = "^1.0.2"
transformers = "^4.26.1"
sentence-transformers = "^2.2.2"
setfit = "^0.6.0"
langchain = "^0.0.83"
openai = "^0.26.5"
tiktoken = "^0.2.0"
datasets = "^2.9.0"
thefuzz = "^0.19.0"
python-levenshtein = "^0.20.9"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
